# gentiming

./: .gitmodules  CMakeLists.txt  README.md  barowork.h  compasswork.cpp  control_module.cpp  control_module.h  gpiorw.cpp  gpiowork.cpp  gpiowork.h  gyrowork.cpp  gyrowork.h  i2cdevice.cpp  main.cpp  utils.cpp  utils.h
gpio/: gpiorw.cpp  gpiorw.h  gpiowork.cpp  gpiowork.h
sensors/: barowork.cpp  barowork.h  compasswork.h  gyrowork.cpp  gyrowork.h
utils/: i2cdevice.cpp  i2cdevice.h  utils.cpp  utils.h
